force-app/main/default/objects/External_Company__c/External_Company__c.object-meta.xml
<CustomObject>
    <label>External Company</label>
    <nameField>
        <displayFormat>EC-{0000000}</displayFormat>
        <label>External Company Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>