force-app/main/default/objects/External_Company__c/fields/company_id__c.field-meta.xml
<CustomField>
    <fullName>company_id__c</fullName>
    <formula>VALUE(company__r.migrationtExternalId__c)</formula>
    <label>company id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>