force-app/main/default/objects/External_Company__c/fields/company_name__c.field-meta.xml
<CustomField>
    <fullName>company_name__c</fullName>
    <formula>company__r.Name</formula>
    <label>company name</label>
    <type>Text</type>
</CustomField>