force-app/main/default/objects/External_Company__c/fields/distributor__c.field-meta.xml
<CustomField>
    <fullName>distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>distributor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.VSSubRegion__c</field>
            <operation>equals</operation>
            <value>VSE DE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>External Companines (distributor)</relationshipLabel>
    <relationshipName>External_Companines1</relationshipName>
    <type>Lookup</type>
</CustomField>