force-app/main/default/objects/External_Company__c/fields/distributor_id__c.field-meta.xml
<CustomField>
    <fullName>distributor_id__c</fullName>
    <formula>VALUE(distributor__r.migrationtExternalId__c)</formula>
    <label>distributor id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>