force-app/main/default/objects/External_Company__c/fields/distributor_name__c.field-meta.xml
<CustomField>
    <fullName>distributor_name__c</fullName>
    <formula>distributor__r.Name</formula>
    <label>distributor name</label>
    <type>Text</type>
</CustomField>