force-app/main/default/objects/External_Company__c/fields/external_company_id__c.field-meta.xml
<CustomField>
    <fullName>external_company_id__c</fullName>
    <label>external company id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>