force-app/main/default/objects/External_Company__c/fields/External_Company_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>External_Company_Name_Formula__c</fullName>
    <formula>external_company_id__c&amp;&apos;-&apos;&amp; distributor__r.Name&amp;&apos;-&apos;&amp; company__r.Name</formula>
    <label>External Company Name Formula</label>
    <type>Text</type>
</CustomField>