force-app/main/default/objects/External_Company__c/fields/Stock_Report__c.field-meta.xml
<CustomField>
    <fullName>Stock_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Report</label>
    <referenceTo>Stock_Report_Import__c</referenceTo>
    <relationshipLabel>External Companines (Stock Report)</relationshipLabel>
    <relationshipName>External_Companines1</relationshipName>
    <type>Lookup</type>
</CustomField>