force-app/main/default/objects/External_Company__c/fields/Stock_Report_Import__c.field-meta.xml
<CustomField>
    <fullName>Stock_Report_Import__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Report Import</label>
    <referenceTo>Stock_Report_Import__c</referenceTo>
    <relationshipLabel>External Companines</relationshipLabel>
    <relationshipName>External_Companines</relationshipName>
    <type>Lookup</type>
</CustomField>