force-app/main/default/objects/External_Company__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_Company_Name_Formula__c</columns>
    <columns>external_company_id__c</columns>
    <columns>company__c</columns>
    <columns>distributor__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>